# rules_go_dep

./: BUILD.bazel  WORKSPACE
